# ctp-rs

./: Cargo.toml  README.md  build.rs
examples/: quote.rs  setpwd.rs  trade.rs
lib/win64/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
src/: bridge.cpp  bridge.hpp  lib.rs  quote.rs  trade.rs
src/quote/: quote_ffi.rs  spi.rs  stub_ffi.rs
src/trade/: stub_ffi.rs
