[package]
edition = "2018"
name = "ctp-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
encoding = "0.2.33"
env_logger = "0.9.0"
libc = "0.2.103"
log = "0.4.14"
thiserror = "1.0.30"
crossbeam = "0.8.1"
structopt = "0.3.23"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"
